; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_vf_bm3d.c_cmp_scores.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_vf_bm3d.c_cmp_scores.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.PosPairCode = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @cmp_scores to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cmp_scores(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.PosPairCode*, align 8
  %6 = alloca %struct.PosPairCode*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to %struct.PosPairCode*
  store %struct.PosPairCode* %8, %struct.PosPairCode** %5, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to %struct.PosPairCode*
  store %struct.PosPairCode* %10, %struct.PosPairCode** %6, align 8
  %11 = load %struct.PosPairCode*, %struct.PosPairCode** %5, align 8
  %12 = getelementptr inbounds %struct.PosPairCode, %struct.PosPairCode* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.PosPairCode*, %struct.PosPairCode** %6, align 8
  %15 = getelementptr inbounds %struct.PosPairCode, %struct.PosPairCode* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @FFDIFFSIGN(i32 %13, i32 %16)
  ret i32 %17
}

declare dso_local i32 @FFDIFFSIGN(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
